<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonaddition"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/addition_button" />

    <Button
        android:id="@+id/buttonsubtraction"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:text="@string/subtraction_button" />

    <Button
        android:id="@+id/buttonmultiplication"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:text="@string/multiplication_button" />

    <Button
        android:id="@+id/buttondivision"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:text="@string/division_button" />
</LinearLayout>